--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -11,6 +11,17 @@
   ga('send', 'pageview');
 
 </script>
-
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script>
+      MathJax = {
+        tex: {
+          inlineMath: [['$', '$'], ['\\(', '\\)']]
+        },
+        svg: {
+          fontCache: 'global'
+        }
+      };
+    </script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
 <!-- https://analytics.google.com/analytics/ -->
 <!-- Lastly modified by Hanlin CAI in 2023/01/15 -->
